# esp32_ethernet_router

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  W5500-ESP32c3-supermini.epro  build_firmware.sh  build_firmware_w5500_c3.sh  sdkconfig.defaults  sdkconfig.defaults.w5500_c3  sdkconfig.defaults.wt32_eth_sta_uplink
components/acl/: CMakeLists.txt  acl.c
components/acl/include/: acl.h
components/cmd_router/: CMakeLists.txt  cmd_router.c  cmd_router.h
components/cmd_system/: cmd_system.c
components/eth_w5500/: CMakeLists.txt  esp_eth_mac_w5500.c  esp_eth_phy_w5500.c  w5500.h  w5500_spi_driver.c
components/eth_w5500/include/: w5500_spi_driver.h
components/http_server/: CMakeLists.txt  favicon_png.h  http_server.c  pages.h
components/http_server/include/: http_server.h
components/http_server/pages/: page_config.h  page_firewall.h  page_index.h  page_mappings.h  page_monitoring.h  page_scan.h  page_vpn.h
components/mqtt_ha/: CMakeLists.txt  mqtt_ha.c
components/mqtt_ha/include/: mqtt_ha.h
components/netflow/: CMakeLists.txt  netflow.c
components/netflow/include/: netflow.h
components/remote_console/: remote_console.c
components/remote_console/include/: remote_console.h
include/: dhcp_reservations.h  router_config.h  vpn_config.h  wifi_config.h
main/: CMakeLists.txt  Kconfig.projbuild  dhcp_manager.c  esp32_nat_router.c  idf_component.yml  netif_hooks.c  portmap.c  vpn_manager.c
